# Flink

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: database.py  genai.py  main.py  models.py
backend/app/routes/: core.py  links.py  main.py  users.py
brand-script/: README.md  script.js
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/payments/: columns.tsx  page.tsx
frontend/src/components/: AuthRoute.tsx  Navbar.tsx  login-form.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/pages/: Generate.tsx  History.tsx  Login.tsx  Redirect.tsx
shopify/: page.html  script.js
